<resources>
    <string name="app_name">Siap Opa</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="petugas_opt">Petugas OPT</string>
    <string name="petugas_kabupaten">Petugas Kabupaten</string>
    <string name="petugas_provinsi">Petugas Provinsi</string>
    <string name="satuan_pelaksana">Satuan Pelaksana</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lapor">Lapor</string>
    <string name="laporan">Laporan</string>
    <string name="wilayah">Wilayah</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="approval">Approval</string>
    <string name="desa_kecamatan">Desa/Kecamatan</string>
    <string name="umur_tanaman">Umur Tanam (HST)</string>
    <string name="luas_terserang">Luas Terserang</string>
    <string name="kepadatan_populasi">Kepadatan Populasi</string>
    <string name="luas_waspada">Luas Waspada</string>
    <string name="rekomendasi_pengendalian">Isi Rekomendasi Pengendalian</string>
    <string name="clear">clear</string>
    <string name="save">Save</string>
    <string name="tanda_tangan">Tanda Tangan</string>
    <string name="input_signature">Input Signature</string>
    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="bukti_foto">Bukti(Foto)</string>
    <string name="signature">Signature</string>
    <string name="keterangan">Keterangan</string>
    <string name="stock">Stock</string>
    <string name="lokasi">Lokasi</string>
    <string name="latitude_langitude">Latitude, Langitude</string>
    <string name="input_lokasi">Input Lokasi</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="tidak_ada_dokumen">Tidak ada dokumen</string>
    <string name="select_file">Select File</string>
    <string name="surat_rekomendasi">Surat Rekomendasi</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="status_approval">Status Approval</string>
    <string name="surat_rekomendasi_pdf">Surat Pengantar.pdf</string>
    <string name="download">Download</string>
    <string name="approve">Approve</string>
    <string name="bandung_20_september_2020">Bandung, 20 September 2020</string>
    <string name="dinda_majesty">Dinda Majesty</string>
    <string name="stock_awal_bulan">Stock Awal Bulan</string>
    <string name="tambahan">Tambahan</string>
    <string name="penggunaan">Penggunaan</string>
    <string name="stock_akhir_bulan">Stock Akhir Bulan</string>
    <string name="input_stock">Input Stock</string>
    <string name="input_stock_pestisida">Input Stock Pestisida</string>
    <string name="liter">Liter</string>
    <string name="laporan_stock">Laporan Stock</string>
    <string name="sisa_serangan">Sisa Serangan</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kec</string>
    <string name="desa">Desa</string>
    <string name="save_data_lokasi">Save Data Lokasi</string>
    <string name="input_data_laporan">Input Data Laporan</string>
    <string name="luas_tanaman">L Tanaman</string>
    <string name="luas_sembuh">L Sembuh</string>
    <string name="luas_panen">L Panen</string>
    <string name="jumlah">Jumlah</string>
    <string name="tambah_serangan">Tambah Serangan</string>
    <string name="luas_tambah_serangan">Luas Tambah</string>
    <string name="intensitas">Intensitas</string>
    <string name="luas_pengendalian">Luas Pengendalian</string>
    <string name="pm">PM</string>
    <string name="jumlah_pestisida">Jumlah Pestisida</string>
    <string name="jumlah_non_pestisida">Jumlah Non Pestisida</string>
    <string name="keadaan_serangan">Keadaan Serangan</string>
    <string name="frekuensi_pengendalian">Frekuensi Pengendalian</string>
    <string name="jumlah_pengendalian">Jumlah Pengendalian</string>
    <string name="kimia">Kimia</string>
    <string name="nabati">Nabati</string>
    <string name="pestisida">Pestisida</string>
    <string name="non_pestisida">Non Pestisida</string>
    <string name="jumlah_cl">Jumlah CL</string>
    <string name="jumlah_ah">Jumlah AH</string>
    <string name="jumlah_nabati">Jumlah Nabati</string>
    <string name="jumlah_kimia">Jumlah Kimia</string>
    <string name="data_inserted">Data Inserted</string>
    <string name="luas_sisa_serangan_pada_periode_laporan">Luas Sisa Serangan Pada Periode Laporan</string>
    <string name="luas_tambah_serangan_pada_periode_laporan">Luas Tambah Serangan Pada Periode Laporan</string>
    <string name="frekuensi_pengendalian_pestisida">Frekuensi Pengendalian Pestisida</string>
    <string name="luas_keadaan_serangan_pada_periode_laporan">Luas Keadaan Serangan Pada Periode Laporan</string>
    <string name="harian_keliling">Harian Keliling</string>
    <string name="blok">Blok</string>
    <string name="luas_hamparan">L Pertanaman</string>
    <string name="luas_diamati">L Diamati</string>
    <string name="luas_persemaian">L Persemaian</string>
    <string name="ph_tanah">PH Tanah</string>
    <string name="komoditas">Komoditas</string>
    <string name="pola_tanam">Pola Tanam</string>
    <string name="petugas_pengamatan">Petugas POPT</string>
    <string name="detail_hasil_harian_keliling">Detail Hasil Harian Keliling</string>
    <string name="varietas">Varietas</string>
    <string name="jumlah_anakan">Jumlah Anakan</string>
    <string name="pbp">PBP</string>
    <string name="tikus">Tikus</string>
    <string name="ganjur">Ganjur</string>
    <string name="tungro">Tungro</string>
    <string name="kh_kr">KH/KR</string>
    <string name="bp">BP</string>
    <string name="n_blas">N.Blas</string>
    <string name="blb">BLB</string>
    <string name="brs">BRS</string>
    <string name="wbc">WBC</string>
    <string name="blas">Blas</string>
    <string name="imago">Imago</string>
    <string name="nimfa">Nimfa</string>
    <string name="wpp">WPP</string>
    <string name="wdh">WDH</string>
    <string name="ug">UG</string>
    <string name="opms">OPMS</string>
    <string name="domi">Domi</string>
    <string name="kisar">Kisar</string>
    <string name="luas_spot_hopperburn">Luas Spot Hopperburn</string>
    <string name="intensitas_tidak_mutlak">Intensitas Serangan Tidak Mutlak</string>
    <string name="intensitas_serangan_mutlak">Intensitas Serangan Mutlak</string>
    <string name="populasi_opt_ekor_rumpun">Populasi OPT(Ekor/Rumpun)</string>
    <string name="kr">KR</string>
    <string name="kt">KT</string>
    <string name="populasi_ma">Populasi MA</string>
    <string name="pembelahan">Pembelahan</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="harian">Harian</string>
    <string name="periode_pengamatan">Periode Pengamatan</string>
    <string name="luas_sisa_serangan">Luas Sisa Serangan</string>
    <string name="eradikasi">Eradikasi</string>
    <string name="cara_lain">Cara Lain</string>
    <string name="intensitas_serangan">Intensitas Serangan</string>
    <string name="input_data_harian_keliling">Input Data Harian Keliling</string>
    <string name="frekuensi_kimia">Frekuensi Kimia</string>
    <string name="frekuensi_nabati">Frekuensi Nabati</string>
    <string name="jenis_opt">OPT</string>
    <string name="ringan">Ringan</string>
    <string name="sedang">Sedang</string>
    <string name="berat">Berat</string>
    <string name="puso">Puso</string>
    <string name="simpan_laporan">Simpan Laporan</string>
    <string name="laporkan">Laporkan</string>
    <string name="catatan">Catatan</string>
    <string name="tambah_opt">Tambah Skor/Skala (Tidak Mutlak)</string>
    <string name="cancel">Cancel</string>
    <string name="laporan_setengah_bulan">Laporan Setengah Bulan</string>
    <string name="sasaran_opt">Sasaran OPT</string>
    <string name="surat">Surat</string>
    <string name="nip">NIP</string>
    <string name="nama">Nama</string>
    <string name="tahun">Tahun</string>
    <string name="bulan">Bulan</string>
    <string name="tanggal">Tanggal</string>
    <string name="lokasi_koordinator">Lokasi Koordinator</string>
    <string name="nama_koordinator">Nama Koordinator</string>
    <string name="lokasi_mantan">Lokasi Mantan</string>
    <string name="nama_mantan">Nama Mantan</string>
    <string name="lokasi_pengamatan">Lokasi Pengamatan</string>
    <string name="bptph_lphp_lah">BPTPH/LPHP/LAH</string>
    <string name="intensitas_serangan_tidak_mutlak">Intensitas Serangan Tidak Mutlak</string>
    <string name="approval_satpel">Approval Satpel</string>
    <string name="approval_kab">Approval Kab</string>
    <string name="kirim">Kirim</string>
    <string name="beranda">Beranda</string>
    <string name="monitoring">Monitoring</string>
    <string name="status_approval_kabupaten">Status Approval Kabupaten</string>
    <string name="status_approval_satpel">Status Approval Satpel</string>
    <string name="harian_keliling_popt">Harian Keliling POPT</string>
    <string name="input_data_opt">Input Data OPT</string>
    <string name="surat_pengantar">Surat Pengantar</string>
    <string name="opt_mutlak">OPT Mutlak</string>
    <string name="opt_tidak_mutlak">OPT Tidak Mutlak</string>
    <string name="alamat">Alamat</string>
    <string name="peringkat_opt">Peringkat OPT</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="tolak">Tolak</string>
    <string name="logo_name">Siap Opa Jabar</string>
    <string name="slogan_name">Aplikasi Pelaporan OPT di Jawa Barat</string>
    <string name="powered_by">Powered By Taimoor Sikander</string>
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="setengah_bulanan">Setengah Bulanan</string>
    <string name="bulanan">Bulanan</string>
    <string name="musim_hujan">Musim Hujan</string>
    <string name="musim_kemarau">Musim Kemarau</string>
    <string name="stock_pestisida">Stock Pestisida</string>
    <string name="stock_alat">Stock Alat</string>
    <string name="data_opt">Data OPT</string>
    <string name="musiman">Musiman</string>
    <string name="pilih_salah_satu_opt_untuk_dilaporkan">Pilih salah satu OPT untuk dilaporkan</string>
    <string name="status_pelaporan">Status</string>
    <string name="inten_popul">Inten/Popul</string>
</resources>