<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/beranda"
            android:fontFamily="@font/muli_semibold"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:fontFamily="@font/muli_semibold"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_wilayah"
            android:icon="@drawable/ic_map_black_24dp"
            android:fontFamily="@font/muli_semibold"
            android:title="@string/wilayah" />
    </group>


    <item android:title="Validasi">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_approval"
                    android:icon="@drawable/ic_assignment_turned_in_black_24dp"
                    android:title="@string/approval" />
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_approval_stgh"
                    android:icon="@drawable/ic_assignment_turned_in_black_24dp"
                    android:title="@string/approval" />
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_approval_bln"
                    android:icon="@drawable/ic_assignment_turned_in_black_24dp"
                    android:title="@string/approval" />
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_approval_hjn"
                    android:icon="@drawable/ic_assignment_turned_in_black_24dp"
                    android:title="@string/approval" />
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_approval_kmr"
                    android:icon="@drawable/ic_assignment_turned_in_black_24dp"
                    android:title="@string/approval" />
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_monitoring"
                    android:icon="@drawable/ic_remove_red_eye_black_24dp"
                    android:title="@string/monitoring" />
            </group>

        </menu>
    </item>

    <item android:title="Hasil Laporan">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_lapor"
                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/setengah_bulanan"
                    android:fontFamily="@font/muli_semibold"/>
                <item
                    android:id="@+id/nav_laporan"
                    android:fontFamily="sans-serif"
                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/bulanan" />
                <item
                    android:id="@+id/nav_hujan"
                    android:fontFamily="sans-serif"
                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/musim_hujan" />
                <item
                    android:id="@+id/nav_kemarau"
                    android:fontFamily="sans-serif"
                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/musim_kemarau" />
            </group>

        </menu>
    </item>

    <item android:title="Stock">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_stock"
                    android:icon="@drawable/ic_storage_black_24dp"
                    android:fontFamily="@font/muli_semibold"
                    android:title="@string/stock" />
                <item
                    android:id="@+id/nav_stock_alat"
                    android:icon="@drawable/ic_storage_black_24dp"
                    android:fontFamily="@font/muli_semibold"
                    android:title="@string/stock" />
            </group>

        </menu>
    </item>
    <item android:title="Charts">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_chart_stock"
                    android:icon="@drawable/ic_insert_chart_black_24dp"
                    android:title="@string/stock" />
                <item
                    android:fontFamily="@font/muli_semibold"
                    android:id="@+id/nav_top"
                    android:icon="@drawable/ic_insert_chart_black_24dp"
                    android:title="@string/data_opt" />
            </group>

        </menu>
    </item>

</menu>
