<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="blocksDescendants"
    tools:context=".InputLapor">

    <TextView
        android:fontFamily="@font/muli_semibold"
        android:id="@+id/txtProvinsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:text="@string/provinsi"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/muli_semibold"
        android:id="@+id/txtKabupaten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/kabupaten"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/txtProvinsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"/>

    <TextView
        android:fontFamily="@font/muli_semibold"
        android:id="@+id/txtKecamatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/kecamatan"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/txtKabupaten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        />

    <TextView
        android:fontFamily="@font/muli_semibold"
        android:id="@+id/txtDesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/desa"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/txtKecamatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        />

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:id="@+id/lineLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesa">

        <TextView
            android:fontFamily="@font/muli_semibold"
            android:id="@+id/txtLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/latitude"
            android:layout_weight="1"
            />

        <TextView
            android:fontFamily="@font/muli_semibold"
            android:id="@+id/txtLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/longitude"
            android:gravity="end"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:id="@+id/lineLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineLay"/>

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:id="@+id/lineLay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineLay2">

        <TextView
            android:fontFamily="@font/muli_semibold"
            android:id="@+id/txtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/alamat"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            />

    </LinearLayout>


    <Button
        android:fontFamily="@font/muli_semibold"
        android:id="@+id/btn_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        android:text="@string/input_lokasi"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineLay3" />

    <Button
        android:fontFamily="@font/muli_semibold"
        android:id="@+id/btn_save_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        android:text="@string/save_data_lokasi"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>