<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:id="@+id/cv_peringatan"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@android:color/holo_red_dark"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/peringatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/pilih_salah_satu_opt_untuk_dilaporkan"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_peringatan">

        <TextView
            android:id="@+id/txtDesa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_semibold"
            android:text="@string/jenis_opt"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVarietas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_semibold"
            android:gravity="center"
            android:text="@string/blok"
            android:textColor="@android:color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_semibold"
            android:gravity="center"
            android:text="@string/luas_diamati"
            android:textColor="@android:color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOPT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_semibold"
            android:gravity="center"
            android:text="@string/inten_popul"
            android:textColor="@android:color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_semibold"
            android:gravity="center"
            android:text="@string/status_pelaporan"
            android:textColor="@android:color/black"
            android:textSize="11sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>